testsuite/tests/rewriting_errors/no_auto_fix/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;  --  FLAG
  |    ^^^^^^^^^

error: Rule "custom" is not defining any auto-fixing function
 in node_checker (called at checker.lkql:4:22)
 in map (called at checker.lkql:4:1)
